--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "formik": "^2.1.7",
     "next": "^9.5.3",
     "react": "^16.13.1",
